--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,7 +1,11 @@
 
 #build stage
 FROM golang:alpine AS builder
-WORKDIR /go/src/app
+WORKDIR /Project_binary
+COPY go.mod .
+COPY go.sum .
+
+RUN go mod download
 COPY . .
 RUN apk add --no-cache git
 RUN go get -d -v ./...
@@ -10,7 +14,7 @@ RUN go install -v ./...
 #final stage
 FROM alpine:latest
 RUN apk --no-cache add ca-certificates
-COPY --from=builder /go/bin/app /app
-ENTRYPOINT ./app
+COPY --from=builder /go/bin/Project_binary /Project_binary
+ENTRYPOINT ./Project_binary
 LABEL Name=project_binary Version=0.0.1
 EXPOSE 8080
