--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,39 @@
 version: '3.4'
 
 services:
-  project_binary:
-    image: project_binary
+  app:
+    container_name: first_binary
+    image: binary:auth_added_V2
     build: .
     ports:
-      - 8080
+      - 8080:8080
     env_file:
       - .env
+    depends_on:
+      - fullstack-mysql
+    environment: 
+      - MYSQL_USER=${user}
+      - MYSQL_PASSWORD=${Password}
+      - MYSQL_DATABASE=${DB_NAME}
+      - MYSQL_ROOT_PASSWORD=${Password}
+    networks:
+      - fullstack
+
+
+
+  fullstack-mysql:
+    image: mysql:8.0.21
+    container_name: DB
+    ports:
+      - 3307:3306
+    environment: 
+      - MYSQL_USER=${user}
+      - MYSQL_PASSWORD=${Password}
+      - MYSQL_DATABASE=${DB_NAME}
+      - MYSQL_ROOT_PASSWORD=${Password}
+    networks:
+      - fullstack
+
+networks:
+  fullstack:
+    driver: bridge
