Added Host and PORT to env

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 DB_NAME=project_binary
+HOST_NAME=127.0.0.1
+#HOST_NAME=fullstack-mysql  //Uncomment when using docker
+PORT=3306
 Password=Stark9415
 user=root
 ACCESS_SECRET=jdnfksdmfksd
